--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,4 +15,4 @@ Imports:
     ggplot2
 Remotes: git::https://github.com/rizbicki/FlexCoDE
 RoxygenNote: 6.1.1
-Depends: FlexCoDE
+Depends: FlexCoDE, ggplot2
